--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     background: rgb(212, 192, 154);
+    max-width: 2000px;
 }
 
 
@@ -21,7 +22,7 @@ body {
     display: flex;
     justify-self: flex-end;
     align-items: center;
-    margin-left: 200px;
+
 }
 
 #mainNav ul li {
@@ -60,7 +61,7 @@ body {
 }
 
 .logoContainer2 img {
-    margin-left: 200px;
+    margin-left: 50px;
     width: 300px;
 }
 
@@ -81,6 +82,55 @@ body {
     width: 300px;
     transform: rotate(360deg);
 }
+
+/* POPUPS */
+
+/* Popup container */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+    visibility: hidden;
+    width: 260px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+    visibility: visible;
+
+}
+
+.popupButton {
+    margin-top: 10px !important;
+}
+
+
 
 /* HEADER */
 
@@ -253,4 +303,14 @@ form button:hover {
     text-align: center;
     font-family: "Slabo 27px";
 
+}
+
+
+
+/* MEDIA QUERIES */
+
+@media(max-width:1287) {
+    #navBar ul {
+        display: grid;
+    }
 }
