--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 #mainNav ul li a {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: black;
     text-decoration: none;
     font-family: "mclaren";
@@ -342,4 +342,9 @@ form button:hover {
 
 #tableInsert i:hover {
     transform: scale(1.3);
+}
+
+.totalDisplay{
+    color: green;
+    text-decoration: none;
 }
